0.3.0+ (in development)
------------------------------------------------------------------------
- Feature: [#10807] Add 2x and 4x zoom levels (currently limited to OpenGL).
- Fix: [#400] Unable to place some saved tracks flush to the ground (original bug).
- Fix: [#7037] Unable to save tracks starting with a sloped turn or helix.
- Fix: [#12691] Ride graph tooltip incorrectly used count instead of number string.
- Fix: [#12694] Crash when switching ride types with construction window open.
- Fix: [#12701] Silent NSIS setup flag /S isn't silent, upgrade pop-up appears anyway.
- Fix: [#12737] Space Rings draw the same vehicle 4 times.
- Fix: [#12764] Rides don't start aged anymore.
- Fix: [#12820] Title menu buttons not invalidating properly
- Fix: Incomplete loop collision box allowed overlapping track (original bug).
- Technical: The required version of macOS has been lowered to 10.13 (High Sierra).

0.3.0 (2020-08-15)
------------------------------------------------------------------------
- Feature: [#7648] "Enable all drawable track pieces" now enables more pieces for the Twister, Vertical and Air Powered Vertical coasters.
- Feature: [#9029] Open doors with the tile inspector.
- Feature: [#9614] Allow popping balloons and quacking ducks in the title screen.
- Feature: [#10572] Cheat to allow building at invalid heights.
- Feature: [#11155] Guest entry points can now be removed by clicking them again.
- Feature: [#11231] Change shortcut window list order to be more intuitive, and split it into logical sections.
- Feature: [#11298] Custom IP address can now be advertised to the master server to work around IPv6 issues.
- Feature: [#11306] Path additions are now kept when replacing the path.
- Feature: [#11320] Support for custom JavaScript plugins.
- Feature: [#11422] Added a shortcut key for disabling/enabling clearance checks.
- Feature: [#11788] Command to extract images from a .DAT file.