@@ -41,7 +41,7 @@
 using namespace OpenRCT2;
 using namespace OpenRCT2::Scripting;
 
-static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 2;
+static constexpr int32_t OPENRCT2_PLUGIN_API_VERSION = 3;
 
 struct ExpressionStringifier final
 {
